test/corpus/balancing.txt
============================
Stray braces
============================
<li>{foo}x</li>
<li>{"}" + 4}</li>
<li>{`${`}`}` /* } bar */}</li>
------------------------
(document
  (element
    (start_tag
      (tag_name)
    )
    (expression
      (svelte_raw_text)
    )
    (text)
    (end_tag
      (tag_name)
    )
  )
  (element
    (start_tag
      (tag_name)
    )
    (expression
      (svelte_raw_text)
    )
    (end_tag
      (tag_name)
    )
  )
  (element
    (start_tag
      (tag_name)
    )
    (expression
      (svelte_raw_text)
    )
    (end_tag
      (tag_name)
    )
  )
)

============================
Line comments
============================
<script>
	export let width;
	export let height;
</script>

<svelte:window on:resize={function () {
	// TODO for some reason this.innerWidth doesn't work as the this context is not the window object during test
	width = window.innerWidth, height = window.innerHeight;
}}/>

<div>{width}x{height}</div>
------------------------
(document
  (script_element
    (start_tag (tag_name))
    (raw_text)
    (end_tag (tag_name))
  )
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (expression (svelte_raw_text))
      )
    )
  )
  (element
    (start_tag (tag_name))
    (expression (svelte_raw_text))
    (text)
    (expression (svelte_raw_text))
    (end_tag (tag_name))
  )
)

============================
Mismatched delimiters in each
============================
{#each foo(] , i}
{/each}
<div>after</div>
------------------------
(document
  (each_statement
    (each_start
      (block_start_tag)
      identifier: (svelte_raw_text)
      index: (svelte_raw_text))
    (each_end (block_end_tag)))
  (element
    (start_tag (tag_name))
    (text)
    (end_tag (tag_name)))
)
